# LLGI

./: .gitignore  .gitmodules  CMakeLists.txt  LLGI.sln  README.md  azure-pipelines.yml  imgui.ini
examples/Fluid2D/: CMakeLists.txt  Fluid2D.cpp  Fluid2D.h  Main.cpp
examples/GPUParticle/: CMakeLists.txt  GPUParticle.cpp  GPUParticle.h  Main.cpp
examples/glfw/: CMakeLists.txt  main.cpp
examples/imgui/: CMakeLists.txt  ImGuiPlatform.h  ImGuiPlatformDX12.h  ImGuiPlatformMetal.h  ImGuiPlatformMetal.mm  ImGuiPlatformVulkan.cpp  ImGuiPlatformVulkan.h  main.cpp
src/: CMakeLists.txt  LLGI.Base.h  LLGI.Buffer.cpp  LLGI.Buffer.h  LLGI.CommandList.cpp  LLGI.CommandList.h  LLGI.Compiler.cpp  LLGI.ComputeBuffer.cpp  LLGI.ComputeBuffer.h  LLGI.ConstantBuffer.h  LLGI.Graphics.cpp  LLGI.Graphics.h  LLGI.IndexBuffer.h  LLGI.PipelineState.cpp  LLGI.PipelineState.h  LLGI.Platform.cpp  LLGI.Platform.h  LLGI.Query.cpp  LLGI.Query.h  LLGI.Texture.cpp  LLGI.Texture.h  LLGI.VertexBuffer.h
src/DX12/: LLGI.BaseDX12.cpp  LLGI.BaseDX12.h  LLGI.BufferDX12.cpp  LLGI.BufferDX12.h  LLGI.CommandListDX12.cpp  LLGI.CommandListDX12.h  LLGI.CompilerDX12.cpp  LLGI.CompilerDX12.h  LLGI.ComputeBufferDX12.cpp  LLGI.ComputeBufferDX12.h  LLGI.ConstantBufferDX12.cpp  LLGI.ConstantBufferDX12.h  LLGI.DescriptorHeapDX12.cpp  LLGI.DescriptorHeapDX12.h  LLGI.GraphicsDX12.cpp  LLGI.GraphicsDX12.h  LLGI.IndexBufferDX12.cpp  LLGI.IndexBufferDX12.h  LLGI.PipelineStateDX12.cpp  LLGI.PipelineStateDX12.h  LLGI.PlatformDX12.cpp  LLGI.PlatformDX12.h  LLGI.QueryDX12.cpp  LLGI.QueryDX12.h  LLGI.RenderPassDX12.cpp  LLGI.RenderPassDX12.h  LLGI.RenderPassPipelineStateDX12.cpp  LLGI.RenderPassPipelineStateDX12.h  LLGI.ShaderDX12.cpp  LLGI.ShaderDX12.h  LLGI.SingleFrameMemoryPoolDX12.cpp  LLGI.SingleFrameMemoryPoolDX12.h  LLGI.TextureDX12.cpp  LLGI.TextureDX12.h  LLGI.VertexBufferDX12.cpp  LLGI.VertexBufferDX12.h
src/G3/: LLGI.G3.CommandList.cpp  LLGI.G3.CommandList.h  LLGI.G3.Compiler.cpp  LLGI.G3.Compiler.h  LLGI.G3.ConstantBuffer.cpp  LLGI.G3.ConstantBuffer.h  LLGI.G3.Graphics.cpp  LLGI.G3.Graphics.h  LLGI.G3.IndexBuffer.cpp  LLGI.G3.IndexBuffer.h  LLGI.G3.PipelineState.cpp  LLGI.G3.PipelineState.h  LLGI.G3.Platform.cpp  LLGI.G3.Platform.h  LLGI.G3.Shader.h  LLGI.G3.Texture.cpp  LLGI.G3.Texture.h  LLGI.G3.VertexBuffer.cpp  LLGI.G3.VertexBuffer.h
src/G3/DX12/: LLGI.G3.BaseDX12.h  LLGI.G3.CommandListDX12.cpp  LLGI.G3.CommandListDX12.h  LLGI.G3.CompilerDX12.cpp  LLGI.G3.CompilerDX12.h  LLGI.G3.ConstantBufferDX12.cpp  LLGI.G3.ConstantBufferDX12.h  LLGI.G3.GraphicsDX12.cpp  LLGI.G3.GraphicsDX12.h  LLGI.G3.IndexBufferDX12.cpp  LLGI.G3.IndexBufferDX12.h  LLGI.G3.PipelineStateDX12.cpp  LLGI.G3.PipelineStateDX12.h  LLGI.G3.PlatformDX12.cpp  LLGI.G3.PlatformDX12.h  LLGI.G3.ShaderDX12.cpp  LLGI.G3.ShaderDX12.h  LLGI.G3.VertexBufferDX12.cpp  LLGI.G3.VertexBufferDX12.h
src/G3/Metal/: LLGI.G3.CommandListMetal.h  LLGI.G3.CommandListMetal.mm  LLGI.G3.CompilerMetal.h  LLGI.G3.CompilerMetal.mm  LLGI.G3.ConstantBufferMetal.h  LLGI.G3.GraphicsMetal.h  (+16 more)
src/Linux/: LLGI.WindowLinux.cpp  LLGI.WindowLinux.h
src/Mac/: LLGI.WindowMac.h  LLGI.WindowMac.mm
src/Metal/: LLGI.BufferMetal.h  LLGI.BufferMetal.mm  LLGI.CommandListMetal.h  LLGI.CommandListMetal.mm  LLGI.CompilerMetal.h  LLGI.CompilerMetal.mm  LLGI.ComputeBufferMetal.h  LLGI.ComputeBufferMetal.mm  LLGI.ConstantBufferMetal.h  LLGI.ConstantBufferMetal.mm  LLGI.GraphicsMetal.h  LLGI.GraphicsMetal.mm  LLGI.IndexBufferMetal.h  LLGI.IndexBufferMetal.mm  LLGI.Metal_Impl.h  LLGI.Metal_Impl.mm  LLGI.PipelineStateMetal.h  LLGI.PipelineStateMetal.mm  LLGI.PlatformMetal.h  LLGI.PlatformMetal.mm  LLGI.QueryMetal.h  LLGI.QueryMetal.mm  LLGI.RenderPassMetal.h  LLGI.RenderPassMetal.mm  LLGI.ShaderMetal.h  LLGI.ShaderMetal.mm  LLGI.SingleFrameMemoryPoolMetal.h  LLGI.SingleFrameMemoryPoolMetal.mm  LLGI.TextureMetal.h  LLGI.TextureMetal.mm  LLGI.VertexBufferMetal.h  LLGI.VertexBufferMetal.mm
src/PC/: LLGI.CreatePC.cpp
src/Utils/: LLGI.FixedSizeVector.h
src/Vulkan/: LLGI.BaseVulkan.cpp  LLGI.BaseVulkan.h  LLGI.BufferVulkan.cpp  LLGI.BufferVulkan.h  LLGI.CommandListVulkan.cpp  LLGI.CommandListVulkan.h  LLGI.CompilerVulkan.cpp  LLGI.ComputeBufferVulkan.cpp  LLGI.ComputeBufferVulkan.h  LLGI.ConstantBufferVulkan.cpp  LLGI.ConstantBufferVulkan.h  LLGI.GraphicsVulkan.cpp  LLGI.GraphicsVulkan.h  LLGI.IndexBufferVulkan.cpp  LLGI.IndexBufferVulkan.h  LLGI.PipelineStateVulkan.cpp  LLGI.PipelineStateVulkan.h  LLGI.PlatformVulkan.cpp  LLGI.PlatformVulkan.h  LLGI.QueryVulkan.cpp  LLGI.QueryVulkan.h  LLGI.RenderPassPipelineStateCacheVulkan.cpp  LLGI.RenderPassPipelineStateCacheVulkan.h  LLGI.RenderPassVulkan.cpp  LLGI.RenderPassVulkan.h  LLGI.ShaderVulkan.cpp  LLGI.ShaderVulkan.h  LLGI.SingleFrameMemoryPoolVulkan.cpp  LLGI.SingleFrameMemoryPoolVulkan.h  LLGI.TextureVulkan.cpp  LLGI.TextureVulkan.h  LLGI.VertexBufferVulkan.cpp  LLGI.VertexBufferVulkan.h
src/WebGPU/: LLGI.BaseWebGPU.cpp  LLGI.BaseWebGPU.h  LLGI.BufferWebGPU.cpp  LLGI.BufferWebGPU.h  LLGI.CommandListWebGPU.cpp  LLGI.CommandListWebGPU.h  LLGI.CompilerWebGPU.cpp  LLGI.CompilerWebGPU.h  LLGI.GraphicsWebGPU.cpp  LLGI.GraphicsWebGPU.h  LLGI.PipelineStateWebGPU.cpp  LLGI.PipelineStateWebGPU.h  LLGI.PlatformWebGPU.cpp  LLGI.PlatformWebGPU.h  LLGI.RenderPassPipelineStateWebGPU.cpp  LLGI.RenderPassPipelineStateWebGPU.h  LLGI.RenderPassWebGPU.cpp  LLGI.RenderPassWebGPU.h  LLGI.ShaderWebGPU.cpp  LLGI.ShaderWebGPU.h  LLGI.TextureWebGPU.cpp  LLGI.TextureWebGPU.h
src/Win/: LLGI.WindowWin.cpp  LLGI.WindowWin.h
src/utils/: LLGI.FixedSizeVector.h
src_test/: CMakeLists.txt  TestHelper.cpp  TestHelper.h  capture.cpp  main.cpp  test.h  test_clear.cpp  test_compile.cpp  test_compute_shader.cpp  test_depth.cpp  test_depth_stencil.cpp  test_empty.cpp  test_mipmap.cpp  test_renderPass.cpp  test_rendertarget.cpp  test_simple_render.cpp  test_textures.cpp
src_test/Shaders/: transpile.py
tools/ShaderTranspiler/: CMakeLists.txt  main.cpp
tools/ShaderTranspilerCore/: CMakeLists.txt  ResourceLimits.cpp  ResourceLimits.h  ShaderTranspilerCore.cpp  ShaderTranspilerCore.h
(+231 files in other folders)
